molstar/manifests/molstar-configuration-mainfest.yaml
# Namespace

apiVersion: v1
kind: Namespace
metadata:
  name: molstar-ns

---

# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: molstar
  namespace: molstar-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: molstar
  template:
    metadata:
      labels:
        app: molstar
    spec:
      containers:
        - name: molstar
          image: gtimelli/molstar-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: web

---

# Service

apiVersion: v1
kind: Service
metadata:
  name: molstar
  namespace: molstar-ns
spec:
  type: ClusterIP
  selector:
    app: molstar
  ports:
    - name: web
      port: 80
      targetPort: 80

---

# Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: molstar-ingress
  namespace: molstar-ns
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <host>
      secretName: <tls_certificate>
  rules:
    - host: <host>
      http:
        paths:
          - path: /molstar(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: molstar
                port:
                  number: 80
